add google 2fa, add sms 2fa

--- a/src/app/popups/two-factor-popup/google-step-four/google-step-four.component.html
+++ b/src/app/popups/two-factor-popup/google-step-four/google-step-four.component.html
@@ -1,3 +1,16 @@
-<p>
-  google-step-four works!
-</p>
+<div class="modal__title">Two-Factor authentication by google authentificator</div>
+<div class="modal__subtitle">
+  <p>Enterh the autentification code</p>
+</div>
+<div class="modal__row modal__row--mb24">
+  <p>Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to
+    address.</p>
+</div>
+<div class="modal__row modal__row--mb32">
+  <div class="wrap-input wrap-input--230">
+    <input class="input" type="text" required="">
+    <label class="wrap-input__label" for="">Authentification code</label>
+    <div class="wrap-input__line"></div>
+    <span class="wrap-input__valid">Incorrect code.</span>
+  </div>
+</div><a class="button button--active button--center button--fz18" href="#">Enable GA</a>
