--- a/src/app/popups/two-factor-popup/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google-step-one/google-step-one.component.html
@@ -1,3 +1,13 @@
-<p>
-  google-step-one works!
-</p>
+<div class="modal__title">Two-Factor authentication by google authentificator</div>
+<div class="modal__subtitle">
+  <p>Download Google Authenticator on your mobile device</p>
+</div>
+<div class="modal__row modal__row--mob-600-column modal__row--mb32">
+  <a class="modal__store-link" href="#">
+    <img src="../../../../assets/img/g-play-black-bg.svg">
+  </a>
+  <a class="modal__store-link" href="#">
+    <img src="../../../../assets/img/app-store-black-bg.svg">
+  </a>
+</div>
+<a class="button button--active button--center button--fz18" href="#">To the next step</a>
