--- a/src/app/popups/two-factor-popup/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google-step-three/google-step-three.component.html
@@ -1,3 +1,11 @@
-<p>
-  google-step-three works!
-</p>
+<div class="modal__title">Two-Factor authentication by google authentificator</div>
+<div class="modal__subtitle">
+  <p>Back up your Secret Key.</p>
+</div>
+<div class="modal__row">
+  <p>Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address.</p>
+</div>
+<div class="modal__row">
+  <div class="modal__code-grey-field">ghmxPw14AFcByz</div>
+</div>
+<a class="button button--active button--center button--fz18" href="#">Yes I saved it</a>
