--- a/src/app/popups/two-factor-popup/sms-step-three/sms-step-three.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-three/sms-step-three.component.html
@@ -1,3 +1,23 @@
-<p>
-  sms-step-three works!
-</p>
+<div class="modal__title">Two-Factor authentication by phone number</div>
+<div class="modal__subtitle">
+  <p>Enter verification code</p>
+</div>
+<div class="modal__row modal__row--column modal__row--mb20">
+  <div class="wrap-input wrap-input--230 wrap-input--mb32">
+    <input class="input" type="text" required="">
+    <label class="wrap-input__label" for="">Verification code</label>
+    <div class="wrap-input__line"></div>
+    <span class="wrap-input__valid">Please enter verification code.</span>
+  </div>
+  <a class="button" href="#"> <span class="button__text">Pay and connect</span></a>
+</div>
+<div class="modal__row modal__row--mb8">Message price<span class="modal__message-price">0.036015 USD</span></div>
+<div class="modal__row">You have<span class="modal__you-balance">1.00 USD</span></div>
+<div class="settings__note modal__note">
+  <div class="settings__note-title">Please note:</div>
+  <ul class="settings__note-list">
+    <li class="settings__note-list-item">To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you. Each sms paid.
+      the cost of one message for your phone number is <b>0.036015 USD.</b></li>
+    <li class="settings__note-list-item">You should have positive balance in <b>USD </b>on your account</li>
+  </ul>
+</div>
