added google fourth and back navigation

--- a/src/app/popups/two-factor-popup/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google-step-one/google-step-one.component.html
@@ -10,4 +10,4 @@
     <img src="../../../../assets/img/app-store-black-bg.svg">
   </a>
 </div>
-<a class="button button--active button--center button--fz18" href="#">To the next step</a>
+<a class="button button--active button--center button--fz18" (click)="onNextStep()">To the next step</a>
