--- a/src/app/popups/two-factor-popup/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google-step-three/google-step-three.component.html
@@ -8,4 +8,4 @@
 <div class="modal__row">
   <div class="modal__code-grey-field">ghmxPw14AFcByz</div>
 </div>
-<a class="button button--active button--center button--fz18" href="#">Yes I saved it</a>
+<a class="button button--active button--center button--fz18" (click)="onNextStep()">Yes I saved it</a>
