--- a/src/app/popups/two-factor-popup/google-step-two/google-step-two.component.html
+++ b/src/app/popups/two-factor-popup/google-step-two/google-step-two.component.html
@@ -3,4 +3,4 @@
   <p>Use Google Authenticator to scan the QRCode</p>
 </div>
 <img class="modal__qr-code" src="../../../../assets/img/qr-code.svg">
-<a class="button button--active button--center button--fz18" href="#">Ok, I did it</a>
+<a class="button button--active button--center button--fz18" (click)="onNextStep()">Ok, I did it</a>
