added sms fourth and back navigation

--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -21,4 +21,4 @@
     <div class="wrap-input__line"></div>
     <span class="wrap-input__valid">Please enter the phone number.</span>
   </div>
-</div><a class="button button--center" href="#">Get verification code</a>
+</div><a class="button button--center" (click)="onNextStep()">Get verification code</a>
