add telegram steps

--- a/src/app/popups/two-factor-popup/telegram-step-two/telegram-step-two.component.html
+++ b/src/app/popups/two-factor-popup/telegram-step-two/telegram-step-two.component.html
@@ -1,3 +1,18 @@
-<p>
-  telegram-step-two works!
-</p>
+<div class="modal__title">Two-Factor authentication by telegram</div>
+<div class="modal__subtitle">
+  <p>Plug in telegram bot</p>
+</div>
+<div class="modal__title">Two-Factor authentication by telegram</div>
+<div class="modal__subtitle">
+  <p>Plug in telegram bot</p>
+</div>
+<div class="modal__row">
+  <p>Enter this code to telegram bot</p>
+</div>
+<div class="modal__row">
+  <div class="modal__code-grey-field">ghmxPw14AFcByz</div>
+</div>
+<div class="modal__row modal__row--mb20">
+  <p>Click on button below after it</p>
+</div>
+<a class="button button--active button--center button--fz18" href="#">Enable</a>
