--- a/src/app/popups/two-factor-popup/telegram-step-one/telegram-step-one.component.html
+++ b/src/app/popups/two-factor-popup/telegram-step-one/telegram-step-one.component.html
@@ -1,3 +1,9 @@
-<p>
-  telegram-step-one works!
-</p>
+<div class="modal__title">Two-Factor authentication by telegram</div>
+<div class="modal__subtitle">
+  <p>Plug in telegram bot</p>
+</div>
+<div class="modal__subtitle">
+  <p>To plug in two factor authorisation telegram bot go to <a href="#" class="link">@exrates_bot</a></p>
+</div>
+<a class="button button--center" (click)="onNextStep()">Next step</a>
+
