click listeners fixed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -143,7 +143,9 @@
         <a
           class="menu-mob__link" href="#"><img class="menu-mob__link-icon" src="../../assets/img/trade.svg"><span class="menu-mob__link-text">Trade</span></a>
           <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop" href="#"><img class="menu-mob__link-icon" src="../../assets/img/piggy-bank.svg"><span class="menu-mob__link-text">Funds</span></a>
-            <div class="menu-mob__wrap-hidden-links"><a class="menu-mob__link" href="#">Transaction history</a><a class="menu-mob__link" href="#">Income/Outcome</a></div>
+            <div class="menu-mob__wrap-hidden-links">
+              <a class="menu-mob__link" href="#">Transaction history</a>
+              <a class="menu-mob__link" href="#">Income/Outcome</a></div>
           </div>
           <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop" href="#"><img class="menu-mob__link-icon" src="../../assets/img/orders.svg"><span class="menu-mob__link-text">Orders</span></a>
             <div class="menu-mob__wrap-hidden-links"><a class="menu-mob__link" href="#">Open orders</a><a class="menu-mob__link" href="#">Orders history</a></div>
