--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -8,7 +8,7 @@
     <div class="select__label">Inner transfer</div>
     <div class="select__line"></div>
     <div class="select__triangle"></div>
-    <ul class="select__list">
+    <ul class="select__list" appDropdown="">
       <li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-pl.svg">Ukraine</li>
       <li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-ru.svg">Russia</li>
       <li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-en.svg">USA</li>
