--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -22,10 +22,18 @@
       <!--<li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-cn.svg">China</li>-->
     </ul>
   </div>
-  <div class="wrap-input wrap-input--230">
-    <input class="input" type="text" required="">
-    <label class="wrap-input__label" for="">Phone number</label>
-    <div class="wrap-input__line"></div>
-    <span class="wrap-input__valid">Please enter the phone number.</span>
-  </div>
+  <form [formGroup]="form">
+    <div class="wrap-input wrap-input--230">
+      <input class="input" type="text" formControlName="phone">
+      <label class="wrap-input__label" for="">Phone number</label>
+      <div class="wrap-input__line"></div>
+      <span class="wrap-input__valid">Please enter the phone number.</span>
+    </div>
+    <!--Input error section -->
+    <div class="input--error" *ngIf="!form.get('phone').valid && form.get('phone').touched">
+      <div *ngIf="form.get('phone').errors != null && form.get('phone').errors['required']">This field is required</div>
+      <div *ngIf="form.get('phone').errors != null && form.get('phone').invalid">Only numbers are allowed</div>
+    </div>
+  </form>
+
 </div><a class="button button--center" (click)="onNextStep()">Get verification code</a>
