added step names for mobile layout

--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -10,13 +10,14 @@
     <!-- modal header start -->
     <div class="modal__header-mob">
       <div class="steps__counter steps__counter--mob">step
-        <span class="steps__counter-val">4</span>/4</div>
+        <span class="steps__counter-val">{{ step }}</span>/{{stepsSize}}</div>
       <div class="modal__header-mob-controls">
-        <a class="modal__control-mob" href="#">
-          <img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg"></a>
+        <!--<a class="modal__control-mob" href="#">-->
+          <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
+        <!--</a>-->
         <a class="modal__control-mob" href="#">
           <img class="modal__control-icon" src="../../../assets/img/learn-blue.svg"></a>
-        <a class="modal__control-mob" href="#">
+        <a class="modal__control-mob" (click)="closePopup()">
           <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
       </div>
     </div>
@@ -25,33 +26,33 @@
         <li class="steps__item" [ngClass]="{'steps__item--current': step === 1}"  (click)="moveNext(1)"*ngIf="step > 0">
           <a class="steps__link">
             <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
-            <span class="steps__number-mob-current">1. By passport</span>
+            <span class="steps__number-mob-current">1. {{ getStepName(1) }}</span>
             <span class="steps__title">{{ getStepName(1) }}</span>
           </a>
         </li>
         <li class="steps__item" [ngClass]="{'steps__item--current': step === 2}" (click)="moveNext(2)" *ngIf="step > 1">
           <a class="steps__link">
             <span class="steps__number" [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
-            <span class="steps__number-mob-current">2. Submit ID</span>
+            <span class="steps__number-mob-current">2. {{ getStepName(2) }}</span>
             <span class="steps__title">{{ getStepName(2) }}</span>
           </a>
         </li>
         <li class="steps__item" [ngClass]="{'steps__item--current': step === 3}" (click)="moveNext(3)" *ngIf="step > 2">
           <a class="steps__link">
             <span class="steps__number" [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
-            <span class="steps__number-mob-current">3. Capture by camera</span>
+            <span class="steps__number-mob-current">3. {{ getStepName(3) }}</span>
             <span class="steps__title">{{ getStepName(3) }}</span>
           </a>
         </li>
         <li class="steps__item" [ngClass]="{'steps__item--current': step === 4}" (click)="moveNext(4)" *ngIf="step > 3">
           <a class="steps__link">
             <span class="steps__number" [ngClass]="{'steps__number--current': step === 4, 'steps__number--valid': step != 4 }">4</span>
-            <span class="steps__number-mob-current">4. By nick with pass</span>
+            <span class="steps__number-mob-current">4. {{ getStepName(4) }}</span>
             <span class="steps__title">{{ getStepName(4) }}</span>
           </a>
         </li>
       </ul>
-      <div class="steps__counter">step <span class="steps__counter-val">{{step}}</span>/4</div>
+      <div class="steps__counter">step <span class="steps__counter-val">{{step}}</span>/ {{ stepsSize  }}</div>
     </div>
     <!-- modal header end -->
     <div class="modal__content" [ngSwitch]="provider">
