added password validation

--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,20 +1,47 @@
 <!-- <div class="content content--settings"> -->
   <div class="settings-content">
     <h3 class="settings-content__title settings-content__title--mb32">Change password</h3>
-    <form class="settings-form">
+    <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="settings-form__row">
         <div class="wrap-input settings-form__wrap-input">
-          <input class="input" type="text" required="">
+          <input
+            class="input"
+            [type]="getInputType()"
+            formControlName="password_1"
+          >
+
+          <div class="input-error" *ngIf="!form.get('password_1').valid && form.get('password_1').touched">
+            <div *ngIf="form.get('password_1').errors != null && form.get('password_1').errors['required']">This field is required</div>
+            <div>Password must be between 8 and 20 symbols, contain letters and numbers</div>
+          </div>
+
+
           <label class="wrap-input__label">Current password</label>
-          <div class="wrap-input__line"></div><span class="wrap-input__show-password"></span><span class="wrap-input__valid">This nickname already taken. Please take another one</span>
+          <div class="wrap-input__line"></div>
+          <span class="wrap-input__show-password" (click)="togglePasswordVisibility()"></span>
+          <span class="wrap-input__valid">This nickname already taken. Please take another one</span>
         </div><span class="settings-form__input-notice">for safety, to confirm that you it is you </span>
       </div>
       <div class="settings-form__row">
         <div class="wrap-input settings-form__wrap-input">
-          <input class="input" type="text" required="">
+          <input
+            class="input"
+            [type]="getInputType()"
+            formControlName="password_2"
+          >
+
+          <div class="input-error" *ngIf="!form.get('password_1').valid && form.get('password_1').touched">
+            <div *ngIf="form.get('password_1').errors['required']">This field is required</div>
+            <div *ngIf="form.get('password_1').errors['passwordsDiffer']">It seems, your passwords mismatch</div>
+          </div>
+
+
           <label class="wrap-input__label">New password</label>
-          <div class="wrap-input__line"></div><span class="wrap-input__show-password"></span><span class="wrap-input__valid">This nickname already taken. Please take another one</span>
-        </div><span class="settings-form__input-notice">should have 8 chars at least, symbols and numbers </span>
+          <div class="wrap-input__line"></div>
+          <span class="wrap-input__show-password" (click)="togglePasswordVisibility()"></span>
+          <span class="wrap-input__valid">This nickname already taken. Please take another one</span>
+        </div>
+          <span class="settings-form__input-notice">should have 8 chars at least, symbols and numbers </span>
       </div>
       <button class="button settings-form__button settings-form__button--mt32">Change password</button>
     </form>
