added password validation fixed

--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -10,6 +10,7 @@
             formControlName="password_1"
           >
 
+          <!--INPUT ERRORS-->
           <div class="input-error" *ngIf="!form.get('password_1').valid && form.get('password_1').touched">
             <div *ngIf="form.get('password_1').errors != null && form.get('password_1').errors['required']">This field is required</div>
             <div>Password must be between 8 and 20 symbols, contain letters and numbers</div>
@@ -30,9 +31,10 @@
             formControlName="password_2"
           >
 
-          <div class="input-error" *ngIf="!form.get('password_1').valid && form.get('password_1').touched">
-            <div *ngIf="form.get('password_1').errors['required']">This field is required</div>
-            <div *ngIf="form.get('password_1').errors['passwordsDiffer']">It seems, your passwords mismatch</div>
+          <!--INPUT ERRORS-->
+          <div class="input-error" *ngIf="!form.get('password_2').valid && form.get('password_2').touched">
+            <div *ngIf="form.get('password_2').errors['required']">This field is required</div>
+            <div *ngIf="form.get('password_2').errors['passwordsDiffer']">It seems, your passwords mismatch</div>
           </div>
 
 
