--- a/src/app/settings/session/session.component.html
+++ b/src/app/settings/session/session.component.html
@@ -3,7 +3,9 @@
   <div class="settings-content__subtitle">Time period, when you stayed logged in system after the last action</div>
   <form class="settings-form">
     <div class="input-range settings__time-range">
-      <input class="input-range__input" type="range" min="5" max="24" value="5"><span class="input-range__min">5min</span><span class="input-range__max">24h</span>
+      <input class="input-range__input" type="range" min="1" max="100" value="24">
+      <span class="input-range__min">5min</span>
+      <span class="input-range__max">24h</span>
     </div>
     <div class="settings-form__row settings-form__row--time">
       <div class="wrap-input">
