--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -36,4 +36,5 @@
     </div>
   </form>
 
-</div><a class="button button--center" (click)="onNextStep()">Get verification code</a>
+</div>
+<a class="button button--center" (click)="onNextStep()">Get verification code</a>
