added error section 2

--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -30,14 +30,14 @@
         type="text" formControlName="phone">
       <label class="wrap-input__label" for="">Phone number</label>
       <div class="wrap-input__line"></div>
-      <div *ngIf="!form.get('phone').valid && form.get('phone').touched">
+      <div *ngIf="form.get('phone').errors != null && form.get('phone').touched">
          <span
-           *ngIf="form.get('phone').errors != null && form.get('phone').errors['required']"
+           *ngIf="form.get('phone').errors['required']"
            class="wrap-input__valid--show">
           Please enter the phone number.
         </span>
         <span
-          *ngIf="form.get('phone').errors != null && form.get('phone').invalid"
+          *ngIf="form.get('phone').invalid && !form.get('phone').errors['required']"
           class="wrap-input__valid--show">
           Only numbers are allowed.
         </span>
