add input valid

--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -33,12 +33,12 @@
       <div *ngIf="form.get('phone').errors != null && form.get('phone').touched">
          <span
            *ngIf="form.get('phone').errors['required']"
-           class="wrap-input__valid--show">
+           class="wrap-input__valid">
           Please enter the phone number.
         </span>
         <span
           *ngIf="form.get('phone').invalid && !form.get('phone').errors['required']"
-          class="wrap-input__valid--show">
+          class="wrap-input__valid">
           Only numbers are allowed.
         </span>
       </div>
