--- a/src/assets/scss/_wrap-input.scss
+++ b/src/assets/scss/_wrap-input.scss
@@ -193,7 +193,8 @@
 }
 
 .wrap-input__valid {
-  display: none;
+  //display: none;
+  display: block;
   // position: absolute;
   bottom: -20px;
   color: $red;
