--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
       <app-two-factor-popup></app-two-factor-popup>
     </div>
 
+    <div *ngIf="isIdentityPopupOpen">
+      <app-identity-popup></app-identity-popup>
+    </div>
+
     <router-outlet></router-outlet>
 
     <a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>
