added login functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
       <app-identity-popup></app-identity-popup>
     </div>
 
+    <div *ngIf="isLoginPopupOpen">
+      <app-login-popup></app-login-popup>
+    </div>
+
     <router-outlet></router-outlet>
 
     <a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>
