added password validation functionality

--- a/src/app/popups/login-popup/login-popup.component.html
+++ b/src/app/popups/login-popup/login-popup.component.html
@@ -1,6 +1,6 @@
 <div class="overlay">
   <div class="popup popup-login">
-    <div class="popup__close"></div>
+    <div class="popup__close" (click)="closeMe()"></div>
     <h6 class="popup__title">Log in</h6>
     <form class="popup__form" id="login-form" action="#">
       <div class="wrap-input popup__wrap-input">
