--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -6,43 +6,70 @@
         <div class="wrap-input settings-form__wrap-input">
           <input
             class="input"
+            [ngClass]="{'input--error': !form.get('password_1').valid && form.get('password_1').touched}"
             [type]="getInputType()"
             formControlName="password_1"
           >
 
-          <!--INPUT ERRORS-->
-          <div class="input-error" *ngIf="!form.get('password_1').valid && form.get('password_1').touched">
-            <div *ngIf="form.get('password_1').errors != null && form.get('password_1').errors['required']">This field is required</div>
-            <div>Password must be between 8 and 20 symbols, contain letters and numbers</div>
-          </div>
-
-
           <label class="wrap-input__label">Current password</label>
           <div class="wrap-input__line"></div>
-          <span class="wrap-input__show-password" (click)="togglePasswordVisibility()"></span>
-          <span class="wrap-input__valid">This nickname already taken. Please take another one</span>
+          <span
+            class="wrap-input__show-password"
+            (click)="togglePasswordVisibility()"
+            [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
+          >
+          </span>
+          <!--Input error section starts-->
+          <div *ngIf="form.get('password_1').touched && form.get('password_1').errors != null">
+              <span
+               *ngIf="form.get('password_1').errors['required']"
+               class="wrap-input__valid">
+                This field is required.
+              </span>
+              <span
+                *ngIf="form.get('password_1').invalid && !form.get('password_1').errors['required']"
+                class="wrap-input__valid">
+                Password must be between 8 and 20 symbols, contain letters and numbers.
+              </span>
+          </div>
+          <!--Input error section ends-->
         </div><span class="settings-form__input-notice">for safety, to confirm that you it is you </span>
+
       </div>
       <div class="settings-form__row">
         <div class="wrap-input settings-form__wrap-input">
           <input
             class="input"
+            [ngClass]="{'input--error': !form.get('password_2').valid && form.get('password_2').touched}"
             [type]="getInputType()"
             formControlName="password_2"
           >
 
-          <!--INPUT ERRORS-->
-          <div class="input-error" *ngIf="!form.get('password_2').valid && form.get('password_2').touched">
-            <div *ngIf="form.get('password_2').errors['required']">This field is required</div>
-            <div *ngIf="form.get('password_2').errors['passwordsDiffer']">It seems, your passwords mismatch</div>
-          </div>
-
-
           <label class="wrap-input__label">New password</label>
           <div class="wrap-input__line"></div>
-          <span class="wrap-input__show-password" (click)="togglePasswordVisibility()"></span>
-          <span class="wrap-input__valid">This nickname already taken. Please take another one</span>
+          <span
+            class="wrap-input__show-password"
+            (click)="togglePasswordVisibility()"
+            [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
+          >
+          </span>
+          <!--<span class="wrap-input__valid">This nickname already taken. Please take another one</span>-->
+          <!--Input error section starts-->
+          <div *ngIf="form.get('password_2').touched && form.get('password_2').errors != null">
+          <span
+            *ngIf="form.get('password_1').errors['required']"
+            class="wrap-input__valid">
+            This field is required.
+          </span>
+            <span
+              *ngIf="form.get('password_2').errors['passwordsDiffer'] && !form.get('password_1').errors['required']"
+              class="wrap-input__valid">
+            The passwords do not match.
+          </span>
+          </div>
+          <!--Input error section ends-->
         </div>
+
           <span class="settings-form__input-notice">should have 8 chars at least, symbols and numbers </span>
       </div>
       <button class="button settings-form__button settings-form__button--mt32">Change password</button>
